--- a/src/pages/yuan/index.module.css
+++ b/src/pages/yuan/index.module.css
@@ -1,3 +1,7 @@
+html {
+  scroll-behavior: smooth;
+}
+
 .wrapper {
   line-height: 1.3;
   font-family: Alegreya;
@@ -31,11 +35,60 @@ ul.big li {
   letter-spacing: .05em;
 }
 
+ul.menu-items {
+  margin-left: 0;
+}
+
+ul.menu-items li {
+  line-height: 200%;
+  letter-spacing: .05em;
+  list-style-type: none;
+}
+
+ul.menu-items li a {
+  text-decoration: none;
+  color: black;
+}
+
 .headingIcon {
   font-size: 2.8em;
   text-align: center;
   margin-bottom: .2em;
   margin-top: 1.3em;
+  animation: bounce 1s ease-in-out infinite;
+}
+
+.locationPin {
+  animation: bounce 1.5s ease-in-out infinite;
+}
+
+@keyframes bounce {
+	0%, 20%, 50%, 80%, 100% {
+    transform: translateY(0);
+  }
+	40% {
+    transform: translateY(-.1em) rotate(5deg) scale(1.03);
+  }
+	60% {
+    transform: translateY(-.05em) rotate(-5deg);
+  }
+}
+
+.kenBurns {
+  animation: kenBurnsEffect 20s ease-in-out infinite;
+}
+
+@keyframes kenBurnsEffect {
+  0% {
+    transform: scale(1);
+  }
+  70% {
+    transform: scale(1.2);
+    filter: brightness(1.4);
+  }
+  100% {
+    transform: scale(1);
+  }
 }
 
 .box {
@@ -83,4 +136,25 @@ h2.qa {
 .button:hover {
   text-decoration: inherit;
   color: inherit;
+}
+
+.menu {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  padding: 1em;
+  background-color: white;
+  transition: left 0.3s ease-in-out, opacity 0.5s ease-in-out;
+  left: -400px;
+  opacity: 0;
+  min-width: 300px;
+}
+
+.menu[data-visible="false"] {
+  pointer-events: none;
+}
+
+.menu[data-visible="true"] {
+  opacity: 1;
+  left: 0;
 }
