--- a/src/pages/yuan/index.module.css
+++ b/src/pages/yuan/index.module.css
@@ -3,6 +3,8 @@ html {
 }
 
 .wrapper {
+  width: 100vw;
+  overflow-x: hidden;
   line-height: 1.3;
   font-family: Alegreya;
   font-size: 1.2em;
@@ -59,6 +61,10 @@ ul.menu-items li a {
 }
 
 .locationPin {
+  animation: bounce 1.5s ease-in-out infinite;
+}
+
+.tapIndicator {
   animation: bounce 1.5s ease-in-out infinite;
 }
 
