--- a/src/pages/yuan/index.module.css
+++ b/src/pages/yuan/index.module.css
@@ -87,7 +87,7 @@
 
   .mainImg {
     box-sizing: border-box;
-    width: 100vw;
+    width: 100%;
     height: 80vh;
     animation: kenBurnsEffect2 20s ease-in-out infinite;
     background-size: cover;
